# daedalus

./: README.md  daedalus_grf_cfg.toml  daedalus_grf_cfg_defaults.toml  daedalus_mcu_cfg.toml  daedalus_mcu_cfg_defaults.toml  daedalus_tcu_cfg.toml  daedalus_tcu_cfg_defaults.toml  daedalus_uni_cfg_defaults.toml  requirements.txt  setup.cfg
daedalus_grf/: __main__.py  mcu_sim.py  tcu_sim.py
daedalus_mcu/: __main__.py  mcu_sim.py
daedalus_tcu/: __main__.py  tcu_sim.py
daedalus_uni/: __main__.py  lakeshore.py
example_scripts/: CMakeLists.txt  publisher.cpp  publisher.py  subscriber.py
rsrc/: grafana-dashboard.json  part_list.ods  pin_connections.ods
