[metadata]
name = daedalus
version = attr: daedalus_mcu.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/daedalus
description = Integrated control system for internal multiphase targets 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Engineering, Stepper Motor
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    daedalus_mcu. = daedalus_mcu.__main__:main
    daedalus_tcu. = daedalus_tcu.__main__:main
    daedalus_grf. = daedalus_grafana.__main__:main
